[metadata]
name = hyperlink_preview
version = 1.0.0
author = gri38
author_email = onzewb@zaclys.net
description = Small visual preview and brief description of a http link: this library gets the data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gri38/hyperlink_preview
project_urls =
    Bug Tracker = https://github.com/gri38/hyperlink_preview/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    beautifulsoup4>=4.9.3
    requests>=2.27.1

[options.packages.find]
where = src